@@ -21,6 +21,8 @@ and get them out to file system.
 
 * Added ability to degradate to http from https.
 
+* Fixed bug of multiple call of sockets.
+
 
 2012.03.01, Version 0.1.9
 
